# SecondPartialHPC

./: .gitignore  README.md  Sobel_GPU.cu  global.time  toGraySharedMem.cu
GrayScale/GPU/: CMakeLists.txt  imagegrayscale.cu  imagegrayscale.sh
GrayScale/Opencv/: CMakeLists.txt  grayScale.cpp  imagegrayscale.sh
ImageModify/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  imageModify  imageModify.cu  imageModify.sh  res_imageModify.txt
OpenCv/GrayScale/: CMakeCache.txt  Makefile  README.md  imagegrayscale.sh  opencvTry
OpenCv/Sobel/: CMakeCache.txt  CMakeLists.txt  Makefile  Sobel.cpp  sobel.sh
SampleOpenCv/: CMakeCache.txt  Makefile  opencvTry.cpp
SampleOpenCv/GrayScale/: CMakeLists.txt  cmake_install.cmake  opencvTry
SampleOpenCv/Sobel/: SObel.cpp
SegundoParcial_HPC/: bare_adv.tex  bibfile.bib
SobelFIlter/CPU/Opencv/: CMakeLists.txt  README.md  Sobel.cpp  SobelOpencv.cpp  plotter.py  res_sobel.txt  sobel.sh  times.txt
SobelFIlter/CPU/c++/: CMakeLists.txt  SobelCpu.sh  (+1 more)
SobelFIlter/GPU/: Sobel_global.cu  Sobel_global.sh  global.time
imageGrayScale/: .imagegrayscale.sh.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  imagegrayscale  imagegrayscale.cu  imagegrayscale.sh  res_imagegrayscale.txt
sharedMem/: .sharedMemCopia.cu.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  res_sharedMem.txt  sharedMem.cu  sharedMem.sh
toGraySharedMem/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  res_toGrayShared  toGraySharedMem  toGraySharedMem.cu  toGraySharedMem.sh
(+38 files in other folders)
