cmake_minimum_required(VERSION 2.8)
project( toGraySharedMem )
find_package( OpenCV REQUIRED )
find_package( CUDA REQUIRED )
set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -O3 -arch=sm_52)
cuda_add_executable( toGraySharedMem.out toGraySharedMem.cu )
target_link_libraries( toGraySharedMem.out ${OpenCV_LIBS} )
